# wfc3-phot-tools

./: .gitignore  README.md  pyproject.toml  setup.py  wfc3_phot_env.yaml  wfc3_phot_tools.yaml
WFC3_phot_tools/: ._WFC3_phot_tools  ._WFC3_phot_tools.egg-info  ._setup.py
WFC3_phot_tools/WFC3_phot_tools/: .___init__.py  .___pycache__  ._data_tools  ._spatial_scan  ._staring_mode  ._utils
WFC3_phot_tools/WFC3_phot_tools.egg-info/: ._PKG-INFO  ._SOURCES.txt  ._dependency_links.txt  ._requires.txt  ._top_level.txt  SOURCES.txt
WFC3_phot_tools/WFC3_phot_tools/data_tools/: ._.ipynb_checkpoints  .___pycache__  ._get_wfc3_data_astroquery.py
WFC3_phot_tools/WFC3_phot_tools/data_tools/.ipynb_checkpoints/: ._del-checkpoint.ipynb
WFC3_phot_tools/WFC3_phot_tools/spatial_scan/: .___pycache__  ._cr_reject.py  ._phot_tools.py
WFC3_phot_tools/WFC3_phot_tools/staring_mode/: .___init__.py  .___pycache__  ._aperture_phot.py  ._background.py  background.py
WFC3_phot_tools/data_tools/: .___init__.py  ._sort_data.py
WFC3_phot_tools/spatial_scan/: .___init__.py  cr_reject.py  phot_tools.py
WFC3_phot_tools/staring_mode/: ._background.py  ._utils.py  aperture_phot.py  background.py
WFC3_phot_tools/utils/: ._UVIS_PAM.py  ._daophot_err.py  UVIS_PAM.py
wfc3_phot_tools/data_tools/: get_wfc3_data_astroquery.py  sort_data.py
wfc3_phot_tools/spatial_scan/: cr_reject.py  phot_tools.py
wfc3_phot_tools/staring_mode/: aperture_phot.py  background.py  rad_prof.py  utils.py
wfc3_phot_tools/utils/: UVIS_PAM.py  daophot_err.py
